# BankMarketing

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: etapa.yml
.github/workflows/: ci.yml
data/golden_set/: evaluation_cases.jsonl
data/kaggle/: README.md
data/processed/: modeling_table.parquet
docs/: data-dictionary.md  golden-set-criteria.md  team.md
notebooks/: 01-eda-e-baseline.ipynb
ref_docs/: 7mlet_bandits_step_by_step.ipynb  7mlet_governance_rag_goldenset.ipynb  Detalhamento do Projeto.md  Divisão de tarefas.md  PLANO.md  README.md
scripts/: bootstrap-issues.sh
src/bankmarketing/: data.py
tests/: test_data.py  test_golden_set.py
