[project]
name = "bankmarketing"
version = "0.1.0"
description = "Plataforma de experimentação adaptativa de ofertas financeiras sobre a base Bank Marketing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dython>=0.7.12",
    "notebook>=7.5.7",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankmarketing"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
