[project]
name = "bankmarketing"
version = "0.1.0"
description = "Plataforma de experimentação adaptativa de ofertas financeiras sobre a base Bank Marketing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dython>=0.7.12",
    "kaggle>=2.2.1",
    "notebook>=7.5.7",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankmarketing"]

[tool.ruff]
# ref_docs guarda material de referência (notebooks de terceiros); fora do lint/format.
# Notebooks (.ipynb) das demais pastas continuam sendo checados (padrão do ruff).
extend-exclude = ["ref_docs"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.11.0",
]
